UHF-2755: Add explanation text to external links for screen readers

--- a/src/scss/components/content/_unit.scss
+++ b/src/scss/components/content/_unit.scss
@@ -204,6 +204,10 @@
     padding-right: 24px; // Width of the external icon plus.
     position: relative;
 
+    .explain-external-icon {
+      @include visually-hidden();
+    }
+
     &:after {
       background-color: $color-black;
       background-size: contain;
