--- a/src/scss/components/navigation/_sidebar-menu.scss
+++ b/src/scss/components/navigation/_sidebar-menu.scss
@@ -72,6 +72,10 @@
         position: relative;
         width: 100%;
 
+        .explain-external-icon {
+          @include visually-hidden();
+        }
+
         &:after {
           background-color: $color-black;
           background-size: contain;
