--- a/src/scss/components/navigation/_skip-to-main.scss
+++ b/src/scss/components/navigation/_skip-to-main.scss
@@ -6,27 +6,27 @@
   --background-color: var(--hdbt-color-black);
   --color: var(--color-white);
   --focus-outline-color: var(--hdbt-color-black);
-  clip: rect(1px, 1px, 1px, 1px); // visually hidden
   word-wrap: normal;
   background-color: var(--background-color);
   border: var(--border-width) solid var(--border-color);
   color: var(--color);
   font-weight: 500;
-  height: 1px; // visually hidden
   left: 50%;
-  overflow: hidden; // visually hidden
   position: absolute;
   scroll-margin-top: 105px; // Amount of air that should be left when scrolled to top.
   text-decoration: none;
-  top: 102px; // A little overlap with language switcher header on mobile.
+  top: 0;
   transform: translateX(-50%);
-  width: 1px; // visually hidden
-
+  transition: top ease-out 0.2s;
+  width: fit-content; // This avoids pushing the content to two rows until absolutely necessary
   z-index: 2;
+
+  &:not(:focus) {
+    @include visually-hidden();
+  }
 
   @include breakpoint($breakpoint-m) {
     scroll-margin-top: 24px; // Amount of air that should be left when scrolled to top.
-    top: 24px; // Half of the top navigation bar.
   }
 
   &:after {
@@ -41,12 +41,13 @@
   }
 
   &:focus {
-    clip: auto;
-    height: auto;
     outline: none;
-    overflow: visible;
     padding: $spacing-half $spacing-and-half;
-    width: auto;
+    top: 102px; // A little overlap with language switcher header on mobile.
+
+    @include breakpoint($breakpoint-m) {
+      top: 24px; // Half of the top navigation bar.
+    }
 
     &:after {
       --size: calc(100% + calc(var(--outline-width) * 2 + var(--outline-gutter) * 2));
