--- a/templates/navigation/menu--main--desktop.html.twig
+++ b/templates/navigation/menu--main--desktop.html.twig
@@ -53,20 +53,24 @@
         item.in_active_trail ? 'menu__item--active-trail'
       ]%}
 
+      {% set explain_external_icon = null %}
+      {% if item.is_external %}
+        {% set explain_external_icon %} <span class="explain-external-icon">({{ 'Link leads to external service'|t({}, {'context': 'Explanation for screen-reader software that the icon visible next to this link means that the link leads to an external service.'}) }})</span>{% endset %}
+      {% endif %}
+
       <li{{ item.attributes.addClass(item_classes) }}>
         <span class="menu__link-wrapper">
           {% if not item.is_nolink %}
             {% set item_title %}
-              <span class="menu__link__text">{{ item.title }}</span>
+
+              {%- set icon_name = (item.url.getOption('attributes')).icon -%}
+              {% if icon_name %}
+                {% include '@hdbt/misc/icon.twig' with {icon: icon_name, icons_path: icons_path} %}
+              {% endif %}
+
+              <span class="menu__link__text">{{ item.title }}{{ explain_external_icon }}</span>
             {% endset %}
 
-            {%- set icon_name = (item.url.getOption('attributes')).icon -%}
-            {% if icon_name %}
-              {% set item_title %}
-                {% include '@hdbt/misc/icon.twig' with {icon: icon_name, icons_path: icons_path} %}
-                <span class="menu__link__text">{{ item.title }}</span>
-              {% endset %}
-            {% endif %}
 
             {% set link_attributes = { 'id': link_id } %}
 
@@ -77,7 +81,7 @@
             {{ link(item_title, item.url, link_attributes) }}
 
           {% else %}
-            <span{{ create_attribute({'class': item_classes} ) }}><span class="menu__link__text" id="{{ link_id }}">{{ item.title }}</span></span>
+            <span{{ create_attribute({'class': item_classes} ) }}><span class="menu__link__text" id="{{ link_id }}">{{ item.title }}{{ explain_external_icon }}</span></span>
           {% endif %}
 
           {% if item.is_collapsed or item.is_expanded %}
