--- a/src/scss/components/navigation/_header-top-navigation.scss
+++ b/src/scss/components/navigation/_header-top-navigation.scss
@@ -18,7 +18,8 @@
       width: 100%;
 
       .explain-external-icon {
-        @include visually-hidden();
+        display: none; //TODO: Replace this with visually-hidden once header-top-navigation supports external link icons
+        // @include visually-hidden();
       }
 
       &:after {
