--- a/src/scss/components/paragraphs/_map.scss
+++ b/src/scss/components/paragraphs/_map.scss
@@ -20,7 +20,7 @@
     width: 100%;
   }
 
-  a {
+  .map__external-link {
     @include font-size(16px, 24px);
     align-items: center;
     bottom: -40px;
