UHF-2755: Add note to check rule relevancy

--- a/src/scss/components/content/_unit.scss
+++ b/src/scss/components/content/_unit.scss
@@ -199,6 +199,7 @@
     }
   }
 
+  // TODO: Is this selector still relevant?
   // Opening hours link (always external)
   .unit__contact-row--opening-hours a {
     padding-right: 24px; // Width of the external icon plus.
