--- a/src/scss/components/navigation/_breadcrumb.scss
+++ b/src/scss/components/navigation/_breadcrumb.scss
@@ -19,7 +19,7 @@
 
     @include breakpoint($breakpoint-m) {
       display: block;
-      margin: 0 $spacing-quarter / 2;
+      margin: 0 math.div($spacing-quarter, 2);
       width: 14px;
     }
   }
