--- a/src/scss/components/navigation/_sidebar-menu.scss
+++ b/src/scss/components/navigation/_sidebar-menu.scss
@@ -166,12 +166,12 @@
 
         &:last-child span.menu__item--nolink,
         &:last-child a {
-          margin-bottom: ($spacing-and-half / 2);
+          margin-bottom: math.div($spacing-and-half, 2);
         }
 
         span.menu__item--nolink,
         a {
-          padding: ($spacing-and-half / 2) 0 ($spacing-and-half / 2) $spacing;
+          padding: math.div($spacing-and-half, 2) 0 math.div($spacing-and-half, 2) $spacing;
           position: relative;
           width: 100%;
 
