--- a/src/scss/components/paragraphs/_hero.scss
+++ b/src/scss/components/paragraphs/_hero.scss
@@ -643,7 +643,7 @@ $koro-height: 50px;
       align-items: center;
       display: flex;
       margin: 0;
-      max-width: ($component-side-padding-mobile + $content-area-wrapper-width-max + $component-side-padding-mobile) / 2;
+      max-width: math.div($component-side-padding-mobile + $content-area-wrapper-width-max + $component-side-padding-mobile, 2);
       width: 50%;
     }
     @if $component-side-padding-mobile != $component-side-padding-desktop {
@@ -669,7 +669,7 @@ $koro-height: 50px;
     @include breakpoint($breakpoint-m)  {
       height: auto;
       margin-top: $spacing-quadruple;
-      max-width: ($component-side-padding-mobile + $content-area-wrapper-width-max + $component-side-padding-mobile) / 2;
+      max-width: math.div($component-side-padding-mobile + $content-area-wrapper-width-max + $component-side-padding-mobile, 2);
       padding: 0 $spacing-double $spacing-quadruple;
       width: 50%;
     }
