--- a/templates/navigation/menu--mobile.html.twig
+++ b/templates/navigation/menu--mobile.html.twig
@@ -50,6 +50,7 @@
       <li{{ item.attributes.addClass(item_classes) }}>
         {% if not item.is_nolink %}
           {% set item_title = item.title %}
+          {% set link_attributes = item.is_currentPage ? { 'aria-current': 'page' } : {} %}
 
           {%- set icon_name = (item.url.getOption('attributes')).icon -%}
           {% if icon_name %}
@@ -57,10 +58,6 @@
               {% include '@hdbt/misc/icon.twig' with {icon: icon_name, icons_path: icons_path} %}
               {{ item.title }}
             {% endset %}
-          {% endif %}
-
-          {% if item.is_currentPage %}
-            {% set link_attributes = { 'aria-current': 'page' } %}
           {% endif %}
 
           {{ link(item_title, item.url, link_attributes) }}
