UHF-2836: Add link-button template

--- a/src/scss/components/button/_button.scss
+++ b/src/scss/components/button/_button.scss
@@ -225,3 +225,8 @@ p > a.hds-button.hds-button--supplementary:first-child {
     color: var(--color-hover);
   }
 }
+
+
+.hds-button .explain-external-icon {
+  @include visually-hidden();
+}
