--- a/templates/content/node.html.twig
+++ b/templates/content/node.html.twig
@@ -91,6 +91,9 @@
     </h2>
   {% endif %}
   {{ title_suffix }}
-  {{ content|without('field_lower_content', 'field_sidebar_content') }}
+
+  {% block main_content %}
+    {{ content|without('field_lower_content', 'field_sidebar_content') }}
+  {% endblock main_content %}
 
 </article>
