UHF-2836: Add translations for opening in new tab

--- a/templates/button/link-button.html.twig
+++ b/templates/button/link-button.html.twig
@@ -57,7 +57,7 @@
 
 {% if open_in_a_new_window %}
   {%- set explain_opens_in_new_window -%}
-    {{ 'opens in a new tab'|t({}, {'context': 'Explanation for users that the link opens in a new tab instead of the expected current tab'}) }}
+    {{ 'the link opens in a new tab'|t({}, {'context': 'Explanation for users that the link opens in a new tab instead of the expected current tab'}) }}
   {%- endset -%}
   {% set explain = explain|merge([explain_opens_in_new_window]) %}
   {% set link_options = link_options|merge({target: '_blank'}) %}
