--- a/templates/module/helfi-news-item/node--news-item.html.twig
+++ b/templates/module/helfi-news-item/node--news-item.html.twig
@@ -24,10 +24,15 @@
 
     {# Main image #}
     {% if content.field_main_image|render %}
-      {% include '@hdbt/misc/image-with-caption.twig' with {
-        image: content.field_main_image,
-        image_caption: main_image_caption
-      } %}
+      <figure class="image">
+        {{ content.field_main_image }}
+
+        {% if main_image_caption %}
+          <figcaption class="image__caption">
+            {{ main_image_caption }}
+          </figcaption>
+        {% endif %}
+      </figure>
     {% endif %}
     {# End of Main image #}
 
