--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -16,6 +16,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   background-color: $body-bg-color;
+  color: $color-black-90;
   display: flex;
   flex-direction: column;
   font-family: $base-font-family;
