--- a/src/scss/components/block/_social-media.scss
+++ b/src/scss/components/block/_social-media.scss
@@ -1,16 +1,17 @@
 .social-media-sharing {
+  @include flex-gap($spacing-half);
   display: flex;
   line-height: 0;
-  margin: 0 -6px $spacing-and-half; // By design the margin is 12px.
+  margin-bottom: $spacing-double;
+  margin-top: $spacing;
 
   .share {
     color: $color-black;
     list-style: none;
-    margin: 0 6px; // By design the margin is 12px.
     text-decoration: none;
 
     .icon {
-      --icon-proportions: #{$spacing-and-half};
+      --icon-proportions: #{$spacing-double};
     }
 
     &:focus,
